# ferrum

./: .gitignore  CHANGELOG_UNIX_ALIASES.md  CLAUDE.md  Cargo.toml  Makefile  README.md  SECURITY.md  UNIX_COMMANDS.md  build.rs
.claude/agents/: code-explorer.md  developer.md  qa-engineer.md  researcher.md  software-architect.md  team-lead.md  tech-lead.md
.claude/rules/: code-quality.md  no-hacks.md  workflow.md
.claude/skills/pr/: SKILL.md
.github/workflows/: build-installers.yml  linux-packages.yml  macos-dmg.yml  release-notes.yml  release.yml  windows-installer.yml
.specs/analysis/: analysis-code-quality.md  analysis-cursor-resize-sync.md  analysis-macos-resize-content-shift.md  analysis-mouse-click-handling.md  analysis-mouse-events-not-working.md  architecture-analysis.md
.specs/research/: research-alacritty-window-resize.md  research-conpty-resize-reflow.md  research-ferrum-architecture-review.md  research-font-hinting.md  research-fontdue-migration.md  research-macos-native-tabs.md  research-macos-tab-plus-button.md  research-nano-cursor-visual-update-issue.md  research-nswindow-setmovable-winit.md  research-portable-pty-v0.8.md  research-rust-crates-verification.md  research-softbuffer-winit.md  research-terminal-alt-screen-state-restoration.md  research-terminal-crate-ecosystem.md  research-terminal-resize-handling.md  research-terminal-resize.md  research-vte-013-api.md  research-winit-030-api-verification.md  research-winit-030-api.md  research-winit-min-inner-size-wsl2.md
.specs/scratchpad/: 020831f8.md  041c3a00.md  065739f8.md  0927d97d.md  2a43dbb6.md  495cc094.md  7375bace.md  7904b3a1.md  7d5f078b.md  7f3a9c2e.md  8c0ebf37.md  915d7cf7.md  9a5ad0fc.md  a7c4f3e9.md  a7d3f1c2.md  a7f3c9d2.md  a7f3d9e2.md  a7f8d3c2.md  a7f9c3d1.md  a8f3c2d1.md  c4e8f2a1-analysis.md  c4e8f2a1.md  c4f7a8b2.md  e2cbf044.md  e4a7c2b9.md  f7e9a2b4.md  rust-crates-verification.md  terminal_alt_screen.md  vte013-res.md
assets/: AppIcon.icns
docs/plans/: 2026-02-19-code-decomposition-design.md  2026-02-19-function-decomposition-design.md  2026-02-20-code-quality-cleanup-design.md  2026-02-20-code-quality-cleanup-plan.md  2026-02-20-context-menus-and-pane-splitting-design.md  2026-02-20-context-menus-and-pane-splitting-plan.md  2026-02-20-cwd-preservation-and-tab-naming-design.md  2026-02-20-cwd-preservation-and-tab-naming.md  2026-02-20-fast-window-close-design.md  2026-02-20-fast-window-close-plan.md  2026-02-20-fix-clear-reset-terminal-design.md  2026-02-20-macos-dmg-design.md  2026-02-20-macos-dmg-plan.md  2026-02-20-release-notes-design.md  2026-02-20-release-notes.md  2026-02-20-settings-ui-redesign.md  2026-02-20-windows-installer-design.md  2026-02-20-working-directory-inheritance-design.md  2026-02-20-working-directory-inheritance-plan.md  2026-02-21-font-fallback-design.md  2026-02-21-font-fallback.md  2026-02-21-native-macos-settings-design.md  2026-02-21-native-macos-settings.md  2026-02-21-native-settings-windows-design.md  2026-02-21-native-settings-windows-plan.md  2026-02-21-settings-ui-polish-design.md  2026-02-21-settings-ui-polish.md  2026-02-21-terminal-desync-fix-design.md  2026-02-21-uk-localization-design.md  2026-02-21-uk-localization-plan.md  2026-02-22-auto-update-design.md  2026-02-22-auto-update.md  2026-02-22-brew-cask-design.md  2026-02-22-brew-cask.md  2026-02-23-manual-update-check-design.md  2026-03-05-page-based-grapheme-design.md  2026-03-05-page-based-grapheme-impl.md  2026-03-08-swash-gamma-correct-rendering-design.md  2026-03-08-swash-gamma-correct-rendering.md
installer/: ferrum.iss  release-notes.md.template
installer/homebrew/: ferrum.cask.rb.template  ferrum.rb.template
installer/macos/: Info.plist.template
installer/windows/: ferrum.iss
src/: main.rs  update.rs  update_installer.rs
src/config/: fonts.rs  mod.rs  model.rs  persistence.rs  theme.rs
src/core/: cell.rs  color.rs  grapheme_cell.rs  grid.rs  mod.rs  page.rs  page_list.rs  position.rs  security.rs  selection.rs  terminal.rs  tracked_pin.rs
src/core/terminal/: alt_screen.rs  grid_ops.rs  reflow.rs  resize.rs
src/core/terminal/handlers/: attributes.rs  cursor.rs  device.rs  edit.rs  erase.rs  mod.rs  private_modes.rs  scroll.rs  sgr.rs
src/gui/: input.rs  lifecycle.rs  menus.rs  mod.rs  pane.rs  state.rs
src/gui/events/: menu_actions.rs  mod.rs  pty.rs  redraw.rs  render_cpu.rs  render_gpu.rs  render_shared.rs  settings_apply.rs  settings_toggle.rs
src/gui/events/keyboard/: clipboard_shortcuts.rs  delete.rs  entry.rs  forward.rs  mod.rs  navigation_shortcuts.rs  rename.rs  selection.rs  settings.rs  shortcuts.rs  tab_shortcuts.rs  word_motion.rs
src/gui/events/mouse/: context_menu.rs  cursor.rs  input.rs  mod.rs  security_popup.rs  settings.rs  tab_bar.rs  tab_bar_actions.rs  tab_bar_rename.rs  tab_drag.rs  tab_hover.rs  terminal_click.rs  update_banner.rs  wheel.rs
src/gui/events/redraw/: animation.rs  mod.rs
src/gui/interaction/: clipboard.rs  cursor_move.rs  geometry.rs  mod.rs  mouse_reporting.rs  resize.rs  selection.rs
src/gui/lifecycle/: mod.rs  pty_events.rs  window_requests.rs
src/gui/platform/: close_dialog.rs  macos.rs  mod.rs
src/gui/platform/linux/: settings_window.rs
src/gui/platform/macos/: ffi.rs  mod.rs  pin.rs  settings_window.rs  tabs.rs
src/gui/renderer/: backend.rs  context_menu.rs  cursor.rs  metrics.rs  mod.rs  rasterizer.rs  scrollbar.rs  security.rs  settings.rs  tab_bar.rs  terminal.rs  traits.rs  types.rs
src/gui/settings/: layout.rs  mod.rs  overlay.rs
src/gui/tabs/: create.rs  manage.rs  mod.rs  pty_reader.rs
src/i18n/: detect.rs  en.rs  mod.rs  translations.rs  uk.rs
src/pty/: cwd.rs  mod.rs
src/pty/scripts/: cat.cmd  head.cmd  rm.cmd  tail.cmd
src/pty/windows-aliases/: du.cmd  find.cmd  grep.cmd  init.cmd  ll.cmd  ls.cmd  ps.cmd  wc.cmd
src/shell-integration/bash/: ferrum.bash
src/shell-integration/zsh/: ferrum-integration
tests/unit/: core_security.rs  core_terminal.rs  gui_events_keyboard_rename.rs  gui_input.rs  gui_tabs.rs
wix/: main.wxs
(+49 files in other folders)
