[package]
name = "Ferrum"
version = "0.4.0"
edition = "2024"
description = "A GPU-accelerated terminal emulator"
repository = "https://github.com/itsserbin/ferrum"
homepage = "https://github.com/itsserbin/ferrum"
license = "GPL-3.0"
authors = ["itsserbin <itsserbin@users.noreply.github.com>"]
readme = "README.md"

[[bin]]
name = "ferrum"
path = "src/main.rs"

[features]
default = ["gpu"]
gpu = ["wgpu", "pollster", "bytemuck"]

[dependencies]
winit = "0.30"
softbuffer = "0.4"
fontdue = "0.9"
portable-pty = "0.9.0"
anyhow = "1"
vte = "0.15"
unicode-width = "0.2"
arboard = "3"
ron = "0.12"
wgpu = { version = "28", optional = true }
pollster = { version = "0.4", optional = true }
bytemuck = { version = "1", features = ["derive"], optional = true }
libc = "0.2.182"
semver = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ureq = { version = "3.2", features = ["json"] }
gethostname = "1.1.0"
zip = "2"
tar = "0.4"
flate2 = "1"

[target.'cfg(not(target_os = "linux"))'.dependencies]
muda = "0.17"

[target.'cfg(target_os = "linux")'.dependencies]
gtk4 = "0.11"

[target.'cfg(target_os = "windows")'.build-dependencies]
winres = "0.1"

[target.'cfg(target_os = "windows")'.dependencies]
windows-sys = { version = "0.61", features = [
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_System_Console",
    "Win32_System_Threading",
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Graphics_Gdi",
    "Win32_System_LibraryLoader",
    "Win32_Graphics_Dwm",
] }

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
objc2-app-kit = { version = "0.3", features = [
    "NSButton",
    "NSColor",
    "NSControl",
    "NSFont",
    "NSGraphics",
    "NSPopUpButton",
    "NSResponder",
    "NSStackView",
    "NSStepper",
    "NSTabView",
    "NSTabViewItem",
    "NSTextField",
    "NSView",
    "NSWindow",
] }
objc2-foundation = "0.3"

[package.metadata.deb]
maintainer = "itsserbin"
depends = "$auto"
section = "utils"
priority = "optional"
assets = [
  ["target/release/ferrum", "usr/bin/", "755"],
  ["README.md", "usr/share/doc/ferrum/README.md", "644"],
  ["LICENSE", "usr/share/doc/ferrum/LICENSE", "644"],
]

[package.metadata.generate-rpm]
summary = "A GPU-accelerated terminal emulator"
license = "GPL-3.0"
assets = [
  { source = "target/release/ferrum", dest = "/usr/bin/ferrum", mode = "755" },
  { source = "README.md", dest = "/usr/share/doc/ferrum/README.md", mode = "644" },
  { source = "LICENSE", dest = "/usr/share/licenses/ferrum/LICENSE", mode = "644" },
]
